# hpg-studio

./: LICENSE  README.md  pyproject.toml
app/: app.py
app/data/: 012.hpg  123.hpg  K3_3.json  K5.json  binary_tree7.json  bowtie.json  cool.hpg  fancy.hpg  hexagon2.json  icerm.hpg  path5.json  pentagon.json  qwe.hpg  realtest.hpg  square.json  star6.json  test.hpg  test.json  triangle.json  wheel6.json
app/static/: applet_analyzer.css  applet_analyzer.js  applet_dataselector.js  applet_editor.js  script.js  styles.css  vertex.css
app/static/framework/: app.js  input.js
client/: README.md  cli.py  client.py  example_usage.py
src/app/static/: applet_analyzer.js
src/app/static/framework/: applets.js
src/client/: client.py
src/hpg_client/: __init__.py  client.py  example_usage.py
src/hpg_server/: hpg-server.py
src/hpg_server/data/: asm.hpg
src/hpg_server/static/: applet_dataselector.js
src/hpg_server/static/framework/: tools.js
src/hpg_server/templates/: index.html
